# VulneraTestX

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  rebuild-debug.sh  rebuild.sh  vcpkg.json
.github/workflows/: ci.yml
inc/: VulneraTestX.hpp
inc/Fuzzing/: Input.hpp
inc/Util/: Process.hpp  SanitizerDetector.hpp
src/: VulneraTestX.cpp  main.cpp
src/Fuzzing/: Input.cpp
src/Util/: Process.cpp  SanitizerDetector.cpp
targets/: ExampleBufferOverflow.cpp
tests/: CoreTests.cpp
tests/Fuzzing/: InputTests.cpp
tests/Util/: ProcessTests.cpp  SanitizerDetectorTests.cpp
